# plaza-tui

./: CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  PLAN.md  README.md  SESSION_RESUME.md  justfile
.github/workflows/: ci.yml
crates/plaza-api/: Cargo.toml
crates/plaza-api/src/: auth.rs  client.rs  error.rs  lib.rs  models.rs  socket.rs
crates/plaza-api/tests/: api_models_test.rs  client_test.rs
crates/plaza-audio/: Cargo.toml
crates/plaza-audio/src/: error.rs  hls.rs  lib.rs  pcm.rs  player.rs  quality.rs  sources.rs  ts.rs
crates/plaza-audio/src/recording/: flac.rs  mod.rs  recorder.rs
crates/plaza-audio/tests/: stream_smoke_test.rs
crates/plaza-tui/: Cargo.toml
crates/plaza-tui/src/: app.rs  config.rs  lib.rs  main.rs
crates/plaza-tui/src/tui/: events.rs  layout.rs  mod.rs  widgets.rs
crates/plaza-tui/src/tui/views/: charts.rs  favorites.rs  help.rs  history.rs  login.rs  news.rs  profile.rs
crates/plaza-tui/tests/: config_test.rs
src/: app.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  socket.rs  theme.rs
src/api/: client.rs  mod.rs  models.rs
src/audio/: hls.rs  mod.rs  pcm.rs  player.rs  sources.rs  ts.rs
src/tui/: events.rs  mod.rs  widgets.rs
src/tui/views/: charts.rs  favorites.rs  help.rs  history.rs  login.rs  mod.rs  news.rs  now_playing.rs  profile.rs
tasks/: lessons.md  recording-design.md  roadmap.md  todo.md
tests/: api_models_test.rs  config_test.rs  hls_test.rs  stream_smoke_test.rs
tests/fixtures/: hls_aac_segment.ts
