[package]
name = "plaza-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI
ratatui          = "0.30"
crossterm        = { version = "0.29", features = ["event-stream"] }
ratatui-image    = "10"

# Async
tokio            = { version = "1", features = ["full"] }
tokio-stream     = "0.1"

# HTTP
reqwest          = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }

# JSON / config
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
toml             = "0.8"

# Socket.io
rust_socketio    = { version = "0.6", features = ["async"] }

# HLS
m3u8-rs          = "6"

# Audio decoding
symphonia        = { version = "0.5", features = ["aac", "mp3", "ogg", "isomp4"] }

# Audio output
rodio            = { version = "0.19", default-features = false, features = ["symphonia-all"] }

# Secure storage
keyring          = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

# Error handling
anyhow           = "1"
thiserror        = "1"

# Utilities
clap             = { version = "4", features = ["derive"] }
dirs             = "5"
chrono           = { version = "0.4", features = ["serde"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes            = "1"
image            = "0.25"
futures-util     = "0.3"

[dev-dependencies]
wiremock         = "0.6"
tempfile         = "3"
