[workspace]
resolver = "2"
members = ["crates/plaza-api", "crates/plaza-audio", "crates/plaza-tui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jtieri/plaza-tui"

[workspace.dependencies]
# Internal crates
plaza-api = { path = "crates/plaza-api" }
plaza-audio = { path = "crates/plaza-audio" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "blocking",
    "rustls-tls",
] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Real-time
rust_socketio = { version = "0.6", features = ["async"] }

# Audio
symphonia = { version = "0.5", features = ["aac", "mp3", "ogg", "isomp4"] }
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }
opus = "0.3"
m3u8-rs = "6"
flacenc = "0.5"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-image = "10"
image = "0.25"

# Storage / platform
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
dirs = "5"

# Diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# CLI / time
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Dev / testing
wiremock = "0.6"
tempfile = "3"
